--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Simple touristic website for the user to find the best places to visit."
     />
     <meta name="keywords" content="tour, cities, tourism, travel, vlog, blog" />
-    <meta name="author" content="M. Ali SÜSLÜ" /
+    <meta name="author" content="M. Ali SÜSLÜ" />
     <title>React App</title>
   </head>
   <body>
